=head1 NAME

Devel::NYTProf::Changes - History of significant changes in Devel::NYTProf

=cut

=head2 Changes in Devel::NYTProf 6.02 - 2nd August 2015

  FlameGraphs upgraded the latest version, which supports searching.
  Use JSON::MaybeXS instead of JSON::Any (deprecated), thanks to Ether #73
  Updated metacpan urls, thanks to Ether #74
  Internal context optimizations, thanks to jandubois #75

=head2 Changes in Devel::NYTProf 6.01 - 4th April 2015

  Changed the clock used on Windows to high resolution QueryPerformanceCounter
    which makes NYTProf useful on windows, at last, thanks to bulk88, #68

  Fallback to checking PATH for nytprof scripts, #61 thanks to calid
  Fix unused variable warnings thanks to zefram, RT#103107
  Fix handling of PERL_DISABLE_PMC, thanks to bulk88, #67

  Use larger buffer size when writing the data file, thanks to bulk88 #69

  Clarified the docs re DB:: functions, #63 thanks to dbooth-boston
  Documentation cleanup thanks to wollmers, #64
  Clarify reason for loading Devel::NYTProf as early as possible.
  Clarification of the RUN-TIME CONTROL OF PROFILING docs

=head2 Changes in Devel::NYTProf 5.07 - 21st Feb 2015

  Fixed use of nytprofcalls and flamegraph scripts to not require PATH #21
  Fixed nytprofhtml --open for KDE4 thanks to HMBRAND RT#99080
  Fixed for installs into directory path with spaces, mohawk2 #40
  Fixed printf NV conversion compiler warnings thanks to zefram RT#91986
  Disabled optimize in t/test25-strevalb.t if -DDEBUGGING and perl >= 5.20
    as workaround for perl RT#70211, #38

  Added 'addtimestamp' option to add a timestamp to the output filename
    (similar to addpid option), PR#17 thanks to Naosuke Yokoe (zentooo)
  Added nytprofpf script to generate reports in the plat_forms format
    http://www.plat-forms.org PR#11 thanks to Holger Schmeisky.
  Added ability to increase the maximum length of a subroutine name #44

  Optimized output performance on threaded perl, thanks to bulk88. PR#27
