@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 7.04, CPAN::Meta::Converter version 2.150005'
+generated_by: 'ExtUtils::MakeMaker version 7.1001, CPAN::Meta::Converter version 2.150005'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -33,5 +33,5 @@ resources:
   homepage: https://code.google.com/p/perl-devel-nytprof/
   license: http://dev.perl.org/licenses/
   repository: git://github.com/timbunce/devel-nytprof.git
-version: '6.02'
-x_serialization_backend: 'CPAN::Meta::YAML version 0.012'
+version: 6.02_90
+x_serialization_backend: 'CPAN::Meta::YAML version 0.018'
