@@ -4,6 +4,15 @@ Devel::NYTProf::Changes - History of significant changes in Devel::NYTProf
 
 =cut
 
+=head2 Changes in Devel::NYTProf 6.02_90
+
+  Fix to account for the deep stack optimizations in perl 5.23.8
+    by Dave Mitchell, with many thanks to Dave Mitchell
+  Fix SIGUSR2 on MSWin32 and div by zero #78 PR#79
+    with thanks to Nicolas Georges
+  Changed URL of KCachegrind home page #87
+    with thanks to Denis Ibaev
+
 =head2 Changes in Devel::NYTProf 6.02 - 2nd August 2015
 
   FlameGraphs upgraded the latest version, which supports searching.
